add sd monitor
